--- a/block-03/style.css
+++ b/block-03/style.css
@@ -1,62 +1,175 @@
-<style>
-            body {
-                font-family: Montserrat, sans-serif;
-                font-size: 15px;
-                line-height: 1.6;
-                letter-spacing: 0.5px;
-                color: #222222;
-                font-weight: 300;
-            }
-            .rn-site-title {
-                line-height: 1;
-                vertical-align: baseline;
-                font-size: 39px;
-                letter-spacing: 4.5px;
-                text-align: center;
-            }
-            .section-title{
-                font-family: Montserrat, sans-serif;
-                line-height: 1em;
-                color:#000000;
-                font-size: 25px;
-                letter-spacing: 1px;
-                text-align: center;
-                font-weight: bold;
-                text-transform: uppercase;
-                background-color: #f8f0ed;
-                color: rgb(207, 145, 137);
-                padding: 15px 0px;
-            }
-            .element-sections{
-                color: black;
-                text-align: center;
-                font-family: Montserrat, sans-serif;
-                font-size: 15px;
-                letter-spacing: 0.3px;
-                line-height: 1.5em;
-                font-weight: 200;
-            }
-            .subsection-title{
-                font-size: 19px;
-                font-style: italic;
-                background-color: #f8f0ed;
-                padding: 0.5%;
-                text-transform: uppercase;
-                font-weight: 100;
-                letter-spacing: 0.5px;
-            }
-            li{
-                line-height: 2.5em;
-                letter-spacing: 0.1em;
-                font-size: 13px;
-            }
-            .hiperlink{
-                text-decoration: none;
-                color: rgb(207, 145, 137);
-                font-weight: 700;
-            }
-            #footer{
-                text-align: right;
-                line-height: 0em;
-            }
-        </style>
+* {
+  margin: 0;
+}
+
+.main-section {
+  display: flex;
+}
+
+.left-intro {
+  background-color: black;
+  height: 100vh;
+  color: white;
+  font-family: quicksand;
+  text-transform: uppercase;
+  width: 50%;
+}
+
+.left-intro > h4 {
+  margin: 30px 0 10px 50px;
+}
+
+.separation {
+  font-family: quicksand;
+  font-size: 30px;
+  color: rgb(93, 93, 93);
+}
+
+.sub-intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-wrap: nowrap;
+  margin: 0;
+}
+
+.sub-intro > h2 {
+  margin: 190px 0 0 250px;
+  font-size: 30px;
+}
+
+h2.name {
+  margin: 0 0 0 250px;
+  font-size: 50px;
+  width: 100%;
+  z-index: 1000;
+}
+
+.sub-intro > h3 {
+  background-color: rgb(252, 233, 58);
+  color: black;
+  font-family: quicksand;
+  margin-left: 350px;
+  padding: 2vh 1vh;
+  text-align: center;
+  text-transform: uppercase;
+  width: 60%;
+  z-index: 1000;
+}
+
+.right-intro {
+  background-image: url('foto_perfil-pb.jpeg');
+  background-size: cover;
+  height: 100vh;
+  width: 50%;
+}
+
+.menu {
+  align-items: center;
+  background-color: rgb(93, 93, 93);
+  color: white;
+  display: flex;
+  font-family: quicksand;
+  font-weight: 700;
+  height: 10vh;
+  justify-content: space-around;
+  text-transform: uppercase;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  opacity: 70%;
+}
+
+a:hover {
+  opacity: 100%;
+  border-bottom: 3px solid rgb(252, 233, 58)
+}
+
+.about {
+  background-color: rgb(236, 236, 236);
+  display: flex;
+  font-family: quicksand;
+  justify-content: space-between;
+  padding: 5vh;
+}
+
+.left-about {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.separationTwo {
+  color: rgb(93, 93, 93);
+  font-size: 25px;
+  line-height: 20px;
+  width: 1%;
+}
+
+.bg-yellow {
+  background-color: rgb(252, 233, 58);
+  height: 300px;
+  width: 300px;
+  margin-left: 0;
+  z-index: 0;
+}
+
+.bg-black {
+  background-color: black;
+  height: 300px;
+  width: 300px;
+  z-index: 1;
+}
+
+.right-about {
+  width: 50%;
+}
+
+.right-about > p, h1, h5 {
+  padding: 0 50px;
+}
+
+.projects {
+  background-color: rgb(236, 236, 236);
+  margin: 0;
+  padding: 5vh;
+  font-family: quicksand;
+}
+
+.projects > h2 {
+  background-color: rgb(236, 236, 236);
+  text-align: center;
+  padding-bottom: 8vh;
+}
+
+.grid-proj {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.grid-proj > a {
+  background-color: rgb(252, 233, 58);
+  border: rgb(93, 93, 93);
+  width: 300px;
+  height: 300px;
+  font-size: 200px;
+  opacity: 100%;
+}
+
+.grid-proj > a > img {
+  width: 300px;
+  height: 300px;
+}
+
+.footer {
+  background-color: rgb(93, 93, 93);
+  color: rgb(252, 233, 58);
+  font-family: quicksand;
+  padding: 4vh;
+}
