--- a/front-end-Module02/block-12/trybe-12.1/my-pokedex/src/App.css
+++ b/front-end-Module02/block-12/trybe-12.1/my-pokedex/src/App.css
@@ -36,3 +36,37 @@
     transform: rotate(360deg);
   }
 }
+
+button:hover {
+  outline: none;
+}
+
+.filter-button {
+  margin: 20px auto;
+  text-align: center;
+}
+
+.filter-button button {
+  color: white;
+  background-color: orange;
+  border: none;
+  border-radius: 15px;
+  margin: 5px;
+  padding: 10px;
+  width: 100px;
+}
+
+.general-button {
+  margin: 20px auto;
+  text-align: center;
+}
+
+.general-button button {
+  color: white;
+  background-color: green;
+  border: none;
+  border-radius: 15px;
+  margin: 5px;
+  padding: 10px;
+  width: 100px;
+}
