--- a/front-end-Module02/block-16/trybe-16.3/my-form-2.0/src/App.css
+++ b/front-end-Module02/block-16/trybe-16.3/my-form-2.0/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+:root {
+  font-size: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body,
+input,
+button,
+textarea {
+  font: 500 1.6rem;
+  color: #6A6180;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 10vh;
+  color: white;
   display: flex;
   flex-direction: column;
+}
+
+.header-info {
   align-items: center;
+  display: flex;
+  height: 2rem;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0 0 0 2rem;
+}
+
+.header-title {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-bottom: 2rem;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #E6E6F0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  width: 80%;
+  margin: 1.2rem auto;
+}
+
+.form-and-info {
+  display: flex;
+}
+
+.info {
+  margin-top: 1.8rem;
+  margin-left: auto;
+  color: #6A6180;
+  border-radius: 0.8rem;
+  background: #F8F8FC;
+  border: 1px solid #E6E6F0;
+  height: 100%;
+  font-size: 1.3rem;
+  padding: 2rem 2rem;
+}
+
+.info h3, h6, h5, p {
+  padding: 1rem;
+}
+
+fieldset {
+  border: none;
+}
+
+.container {
+  padding: 1rem 1rem 0;
+}
+
+.container label {
+  color: #6A6180;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.container input,
+.container select,
+.container textarea {
+  width: 100%;
+  height: 3.6rem;
+  margin-top: 0.5rem;
+  border-radius: 0.8rem;
+  background: #F8F8FC;
+  border: 1px solid #E6E6F0;
+  outline: 0;
+  padding: 1rem 1.3rem;
+  font: 1rem;
+}
+
+.container textarea {
+  height: 5rem;
+  resize: vertical;
+}
+
+.container select option {
+  font-size: 12px;
+}
+
+.button-div {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+
+button {
+  width: 8rem;
+  height: 2rem;
+  border-radius: 0.5rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 1rem;
+  text-decoration: none;
+  background: #6A6180;
+  color: #E6E6F0;
+  transition: background 0.2s;
+  outline: none;
+}
+
+button:hover {
+  background: #9C98A6;
 }
