--- a/trybe-projects/project12-movie-cards-library/src/App.css
+++ b/trybe-projects/project12-movie-cards-library/src/App.css
@@ -22,8 +22,9 @@ body {
 .movie-list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
-  padding: 48px 30px;
+  margin: 0 auto;
+  max-width: 90%;
+  padding: 5vh 5vw;
 }
 
 .movie-card {
@@ -41,6 +42,7 @@ body {
 
 .movie-card-image {
   width: 100%;
+  max-height: 30%;
 }
 
 .movie-card-body {
@@ -81,4 +83,98 @@ body {
   display: flex;
   justify-content: flex-end;
   padding: 12px 20px;
+}
+
+.searchBar-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 2vh auto 1vh;
+  text-align: center;
+  width: 80%;
+}
+
+.forms-container {
+  margin: 2vh auto 1vh;
+  text-align: center;
+  width: 80%;
+}
+
+.forms-container h3 {
+  margin-bottom: 3vh;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  max-width: 25%;
+  margin: 1vh auto 2vh;
+}
+
+.input-group label {
+  align-self: start;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 14pt;
+  letter-spacing: 1.3px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.input-group input {
+  border: none;
+  border-radius: 8px;
+  padding: 1vh 1vw;
+}
+
+.input-group select,
+.input-group textarea {
+  background-color: white;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+  padding: 1vh 1vw;
+}
+
+.checkbox-group {
+  padding: 1vh 1vw;
+  margin-top: 4vh;
+}
+
+.checkbox-group label {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 14pt;
+  letter-spacing: 1.3px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.checkbox-group input {
+  padding: 1vh 1vw;
+  margin-right: 1vw;
+}
+
+.forms-container button {
+  background-color: #007bff;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 1px 5px 10px rgb(0, 0, 0);
+  color: white;
+  margin: 3vh auto;
+  padding: 1vh 2vw;
+}
+
+.forms-container button:hover {
+  background-color: #47a0ff;
+}
+
+.forms-container button:focus,
+.input-group select:focus,
+.input-group input:focus,
+.input-group textarea:focus {
+  outline: none;
+  box-shadow: 1px 3px 5px rgb(0, 0, 0);
+}
+
+.forms-container button:active {
+  background-color: #47a0ff;
+  box-shadow: 1px 1px 1px rgb(24, 24, 24);
+  outline: none;
 }
